only require contactId in photo upload request
